@@ -35,7 +35,7 @@ Description
 
 This class represents a font face (or typeface) loaded from a font file. Usually a face represents all the information in the font file (such as a TTF file), although it is possible to have multiple faces in a single file.
 
-Never 'use' this module directly; the class is loaded automatically from Font::FreeType. Use the `Font::FreeType.face()` method to create a new Font::FreeType::Face object from a filename and then use the `forall-chars()`, or `forall-glyphs()` methods.
+This class is loaded automatically from Font::FreeType. Use the `Font::FreeType.face()` method to create a new Font::FreeType::Face object from a filename and then use the `forall-chars()`, or `forall-glyphs()` methods.
 
 Methods
 -------
@@ -124,7 +124,7 @@ If there was an error loading the glyph, then the glyph's, `stat` method will re
 
 ### forall-char-images($text, &code)
 
-    $face.forall-char-imagess: "Raku", -> Font::FreeType::GlyphImage $glyph-image { ... }
+    $face.forall-char-images: "Raku", -> Font::FreeType::GlyphImage $glyph-image { ... }
 
 Iterates through all the characters in the text, and passes the corresponding [Font::FreeType::GlyphImage](https://pdf-raku.github.io/Font-FreeType-raku/Font/FreeType/GlyphImage) object for each of them in turn. Glyphs which don't correspond to Unicode characters are ignored.
 
@@ -166,7 +166,7 @@ See also `has-glyph-names()` above.
 
 ### height()
 
-The line-height of the text in unscaled font units, i.e. distance between baselines of two lines of text.
+The line-height of the text, i.e. distance between baselines of two lines of text.
 
 ### is-bold()
 
@@ -199,7 +199,7 @@ For example:
 
 The `mode` option controls how the kerning is calculated, with the following options available:
 
-  * *FT_KERNING_UNSCALED* (default)
+  * *FT_KERNING_UNSCALED*
 
     Leave the measurements in font units, without scaling, and without hinting.
 
@@ -249,17 +249,38 @@ Font metrics and metrics for individual glyphs are also scaled to match.
 
 ### set-char-size(_width_, _height_, _x-res_, _y-res_)
 
-Perl backwards compatible alternative to `set-font-size`. Font metrics are scaled for individual glyphs, but not for the font face. The `scaled-metrics` method may be called to get the scaled metrics.
+Perl backwards compatible alternative to `set-font-size`. Font metrics are scaled for individual glyphs, but are not scaled for font metrics. The `scaled-metrics` method may be called to get the scaled metrics.
 
 This method may be deprecated in future released.
 
-### set-pixel-sizes(_width_, _height_)
+### set-pixel-sizes(_width_, _height_, :$scale-font)
 
 Set the size at which bit-mapped fonts will be loaded. Bitmap fonts are automatically set to the first available standard size, so this usually isn't needed.
 
+Font metrics are scaled for individual glyphs. The `:scale-font` option will also cause scaling of font metrics:
+
+```raku
+use Font::FreeType;
+
+my Font::FreeType $ft .= new;
+my $vera = $ft.face: 't/fonts/Vera.ttf';
+
+$vera.set-pixel-sizes(24,24,);
+
+$vera.for-glyphs: "T", { say .width; } # 16 (scaled)
+say $vera.height;               # 2384 (unscaled)
+say $vera.kerning('T', '.').x;  # -243 (scaled)
+
+$vera.set-pixel-sizes(24,24, :scale-font);
+
+$vera.for-glyphs: "T", { say .width; } # 16
+say $vera.height;               # 5.25
+say $vera.kerning('T', '.').x;  # -1.421875
+```
+
 ### scaled-metrics()
 
-This method can be called after calling `set-char-size()` or `set-pixel-sizes()` to get a [Font::FreeType::SizeMetrics](https://pdf-raku.github.io/Font-FreeType-raku/Font/FreeType/SizeMetrics) object for computing scaled font metrics.
+This method can be called after calling `set-char-size()` or `set-pixel-sizes()` without the `:scale-font` option to get a [Font::FreeType::SizeMetrics](https://pdf-raku.github.io/Font-FreeType-raku/Font/FreeType/SizeMetrics) object that returns scaled font metrics.
 
 ### style-name()
 
@@ -269,7 +290,7 @@ A string describing the style of the font, such as 'Roman' or 'Demi Bold'. Most 
 
 ### underline-thickness()
 
-The suggested position and thickness of underlining for the font, in unscaled font units. `Int:U` is returned if the information isn't available.
+The suggested position and thickness of underlining for the font. `Int:U` is returned if the information isn't available.
 
 ### units-per-EM()
 
@@ -283,13 +304,9 @@ The current active [Font::FreeType::CharMap](https://pdf-raku.github.io/Font-Fre
 
 An array of the available [Font::FreeType::CharMap](https://pdf-raku.github.io/Font-FreeType-raku/Font/FreeType/CharMap) objects for the face.
 
-### bbox()
-
-The outline's bounding box for this face is returned as an `FT_BBox` object with `x-min`, `y-min`, `x-max`, `y-max` accessors. Values are in unscaled font units
-
 ### bounding-box()
 
-The outline's bounding box returned as a 4 element array: `($x-min, $y-min, $x-max, $y-max)`. Values are in unscaled font units.
+The outline's bounding box returned as a 4 element array: `($x-min, $y-min, $x-max, $y-max)`.
 
 ### raw()
 
